# Surrogate-Management-Framework

./: CMakeList.txt  CMakeLists.txt  README.md
Code/: IO_helper.cpp  chol.cpp  main.cpp  model.h
Code/Header/: IO_helper.h  chol.h  filter.h  lhs.h  read.h  read_phase.h  settings.h  utils.h
Code/Source/: IO_helper.cpp  chol.cpp  filter.cpp  lhs.cpp  main.cpp  read.cpp  read_phase.cpp  settings.cpp  utils.cpp
Tests/IO/read/: main.cpp
Tests/IO/read_phase/: main.cpp
Tests/Math/Cholesky/: main.cpp
Tests/SMF/Settings/: main.cpp
